# event_dashboard

./: data.sh  docker-compose.yml  package-lock.json
backend/: Dockerfile  go.mod  go.sum  main.go
backend/migrations/: 00001_init.sql
backend/router/: serviceStruct.go
backend/utils/: detectEventSchema.go  eventStruct.go
frontend/: Dockerfile  frontend.env  package-lock.json  package.json
frontend/src/: App.tsx  EventTable.tsx  JsonViewer.tsx  constants.ts
frontend/src/services/: events.service.ts
rust_backend/: Cargo.toml  Dockerfile
rust_backend/migrations/: 20240824133957_event_table.down.sql  20240824133957_event_table.up.sql
rust_backend/src/: axum_main.rs  lib.rs  main.rs
rust_backend/src/handlers/: axum_handlers.rs  mod.rs
rust_backend/src/models/: event.rs
