[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15"
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["chrono", "runtime-tokio", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
