[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rust_backend"
path = "src/main.rs"

[[bin]]
name = "rust_axum"
path = "src/axum_main.rs"


[dependencies]
actix-cors = "0.7"
actix-service = "2.0"
actix-web = "4.9"
axum = "0.7"
dotenv = "0.15"
env_logger = "0.11.5"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
http = "1.1"
jsonwebtoken = "9.3"
mongodb = "3.0"
serde_json = "1.0"
sha2 = "0.10"
tower-http = { version = "0.5.2", features = ["full"] }

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "runtime-tokio", "postgres"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
